--- a/docs/NANO/df_report_20251108_035438.md
+++ b/docs/NANO/df_report_20251108_035438.md
@@ -13,8 +13,8 @@
 36K	/root/projects/app_pdfjpg_mobile
 400K	/root/projects/app
 416K	/root/projects/assistant_yurist
-544K	/root/projects/persobi-content
-1.3M	/root/projects/testbot
+544K	/opt/content_factory
+1.3M	/root/projects/
 29M	/root/projects/deniska-dashboard
 53M	/root/projects/deniska-remote
 70M	/root/projects/jurist
@@ -64,8 +64,8 @@ PID   CPU% MEM%  CMD
 ```
 jurist.service             active
 deniska-dashboard.service  active
-persobi.service            active
-testbot.service            inactive
+content-factory.service            active
+            inactive
 
 ```
 
