--- a/docs/NANO/df_report_20251108_041114.md
+++ b/docs/NANO/df_report_20251108_041114.md
@@ -12,8 +12,8 @@
 36K	/root/projects/app_pdfjpg_mobile
 400K	/root/projects/app
 416K	/root/projects/assistant_yurist
-576K	/root/projects/persobi-content
-1.3M	/root/projects/testbot
+576K	/opt/content_factory
+1.3M	/root/projects/
 29M	/root/projects/deniska-dashboard
 53M	/root/projects/deniska-remote
 70M	/root/projects/jurist
@@ -63,8 +63,8 @@ PID   CPU% MEM%  CMD
 ```
 jurist.service             active
 deniska-dashboard.service  active
-persobi.service            active
-testbot.service            inactive
+content-factory.service            active
+            inactive
 ```
 
 *Автосгенерировано скриптом /root/bin/df_report.sh на 2025-11-08 04:11:14*
